--- a/SpringBootApp/src/main/resources/application.properties
+++ b/SpringBootApp/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=SpringBootApp
 server.port = 8082
+
+logging.level.org.springframework=ERROR
+logging.level.vs.korzhina=DEBUG
