--- a/MyUIRestDbService/src/main/resources/application.properties
+++ b/MyUIRestDbService/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=MyUIRestDbService
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.open-in-view=false
-spring.datasource.url=jdbc:h2:D://SpringBootApp//SpringBootAppWithDB//testdb//students
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql= true
+spring.main.allow-circular-references=true
+spring.datasource.url=jdbc:h2:D://SpringBootApp//MyUIRestDbService//testdb//studentsnew
